<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_fragment.StartMenuFragment"
    android:gravity="center_vertical">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_start_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.order.StartOrderFragment">

        <Button
            android:id="@+id/dog_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:text="@string/dog_diary"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:backgroundTint="@color/skyblue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dog_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="108dp"
            android:padding="20dp"
            android:text="@string/dog_search"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:backgroundTint="@color/skyblue"
            app:layout_constraintTop_toBottomOf="@id/dog_diary"
            tools:layout_editor_absoluteX="28dp" />

        <Button
            android:id="@+id/dog_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="20dp"
            android:text="@string/dog_record"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:backgroundTint="@color/skyblue"
            app:layout_constraintTop_toBottomOf="@id/dog_search"
            tools:layout_editor_absoluteX="4dp" />

        <ImageView
            android:id="@+id/dog_image"
            android:layout_width="253dp"
            android:layout_height="252dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="13dp"
            android:src="@drawable/kakaotalk_20230616_125619069"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dog_record"
            app:layout_constraintVertical_bias="0.953" />

        <ImageView
            android:id="@+id/speak_image"
            android:layout_width="204dp"
            android:layout_height="130dp"
            android:src="@drawable/__2023_06_16_234541"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="333dp"
            app:layout_constraintBottom_toTopOf="@id/dog_image"
            app:layout_constraintEnd_toEndOf="@id/dog_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>